load(":generate_certificates.bzl", "generate_certificates")
load(":main_certs_def.bzl", main_certs_def = "certs_def")
load(":apple_certs_def.bzl", apple_certs_def = "certs_def")

package(default_visibility = ["//visibility:public"])

generate_certificates(
    name = "generate_main_certificates",
    certs_def = main_certs_def,
    static_inputs = glob(["static/**"]),
)

generate_certificates(
    name = "generate_apple_certificates",
    certs_def = apple_certs_def,
    static_inputs = glob(["static/**"]),
)
